--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "osm-trains",
   "version": "1.0.0",
   "description": "Data fetching and processing for an interactive railway map",
-  "main": "filtergeo.js",
+  "main": "processData.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsx processData.ts"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/timichal/osm-trains#readme",
   "dependencies": {
-    "ts-node": "^10.9.2",
+    "@types/node": "^22.9.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
 }
