--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Data fetching and processing for an interactive railway map",
   "main": "processData.ts",
   "scripts": {
-    "download": "sh ./downloadAndConvertPbf.sh",
-    "filter": "tsx pruneData.ts",
-    "merge": "tsx merge.ts",
-    "build": "tsx processData.ts"
+    "download": "sh ./pbf-scripts/download.sh",
+    "filter": "sh ./pbf-scripts/filterRailFeatures.sh",    
+    "merge": "sh ./pbf-scripts/merge.sh",
+    "convert": "sh ./pbf-scripts/convertToGeoJson.sh",
+    "build": "tsx processData.ts"    
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,6 @@
   },
   "homepage": "https://github.com/timichal/osm-trains#readme",
   "dependencies": {
-    "@mapbox/geojson-merge": "^1.1.1",
     "@types/node": "^22.9.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
