--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react-dom": "19.1.0",
     "next": "15.4.5",
     "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,6 +22,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/leaflet": "^1.9.14",
+    "@types/pg": "^8.11.10",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
