--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "processData.ts",
   "scripts": {
     "prepareData": "sh ./osmium-scripts/prepare.sh",
-    "check": "tsx checkRailwayDefinitions.ts",
-    "apply": "tsx applyRailwayDefinitions.ts",
-    "merge": "tsx mergeCountryFiles.ts",
-    "populateDb": "node load-data.js"
+    "check": "tsx scripts/checkRailwayDefinitions.ts",
+    "apply": "tsx scripts/applyRailwayDefinitions.ts",
+    "merge": "tsx scripts/mergeCountryFiles.ts",
+    "populateDb": "tsx scripts/populateDb.ts"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/timichal/osm-trains#readme",
   "dependencies": {
     "@types/node": "^22.10.5",
+    "@types/pg": "^8.11.10",
     "pg": "^8.12.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
