--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,25 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "jose": "^6.0.12",
+    "leaflet": "^1.9.4",
+    "next": "15.4.5",
+    "pg": "^8.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.5",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "pg": "^8.12.0"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/leaflet": "^1.9.14",
-    "@types/pg": "^8.11.10",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tsx": "^4.20.3",
+    "typescript": "^5"
   },
   "overrides": {
     "react-leaflet": {
