--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
+    "dotenv": "^16.4.5",
     "pg": "^8.12.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
