--- a/.github/workflows/prepare-data.yml
+++ b/.github/workflows/prepare-data.yml
@@ -32,8 +32,8 @@ jobs:
         
       - name: Install osmium-tool
         run: |
-          wget -qO- https://osmcode.org/osmium-tool/install.sh | bash
-          sudo cp osmium /usr/local/bin/
+          sudo apt-get update
+          sudo apt-get install -y osmium-tool
           
       - name: Create data directory
         run: mkdir -p data
