--- a/.github/workflows/prepare-data.yml
+++ b/.github/workflows/prepare-data.yml
@@ -87,10 +87,14 @@ jobs:
             export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
             export POSTGRES_DB="railmap"
             
-            # Install dependencies if node_modules doesn't exist
-            if [ ! -d "node_modules" ]; then
-              npm ci
+            # Install Node.js if not present
+            if ! command -v node &> /dev/null; then
+              curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
+              sudo apt-get install -y nodejs
             fi
+            
+            # Install dependencies
+            npm ci
             
             # Ensure database is running
             docker-compose up -d postgres
