prepare data nvm

--- a/.github/workflows/prepare-data.yml
+++ b/.github/workflows/prepare-data.yml
@@ -87,11 +87,17 @@ jobs:
             export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
             export POSTGRES_DB="railmap"
             
-            # Install Node.js if not present
+            # Install Node.js if not present (using nvm for user-level install)
             if ! command -v node &> /dev/null; then
-              curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
-              sudo apt-get install -y nodejs
+              curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
+              export NVM_DIR="$HOME/.nvm"
+              [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+              nvm install 22
+              nvm use 22
             fi
+            
+            # Ensure node and npm are in PATH
+            export PATH="$HOME/.nvm/versions/node/$(ls $HOME/.nvm/versions/node | head -1)/bin:$PATH"
             
             # Install dependencies
             npm ci
