--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "osm-trains",
   "version": "1.0.0",
-  "description": "Data fetching and processing for an interactive railway map",
-  "main": "processData.ts",
+  "description": "OSM railway data processing and visualization system",
+  "private": true,
   "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "prepareData": "sh ./osmium-scripts/prepare.sh",
-    "check": "tsx scripts/checkRailwayDefinitions.ts",
-    "apply": "tsx scripts/applyRailwayDefinitions.ts",
-    "merge": "tsx scripts/mergeCountryFiles.ts",
-    "populateDb": "tsx scripts/populateDb.ts"
+    "check": "tsx src/scripts/checkRailwayDefinitions.ts",
+    "apply": "tsx src/scripts/applyRailwayDefinitions.ts",
+    "merge": "tsx src/scripts/mergeCountryFiles.ts",
+    "populateDb": "tsx src/scripts/populateDb.ts"
   },
   "repository": {
     "type": "git",
@@ -21,11 +25,37 @@
   },
   "homepage": "https://github.com/timichal/osm-trains#readme",
   "dependencies": {
-    "@types/node": "^24.2.0",
-    "@types/pg": "^8.11.10",
-    "dotenv": "^17.2.1",
-    "pg": "^8.12.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.9.2"
+    "@types/node": "^24.7.1",
+    "@types/pg": "^8.15.5",
+    "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
+    "jose": "^6.1.0",
+    "leaflet": "^1.9.4",
+    "next": "^15.5.4",
+    "pg": "^8.16.3",
+    "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/leaflet": "^1.9.20",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
+    "eslint": "^9.37.0",
+    "eslint-config-next": "^15.5.4",
+    "tailwindcss": "^4.1.14"
+  },
+  "overrides": {
+    "react-leaflet": {
+      "react": "19.2.0",
+      "react-dom": "19.2.0"
+    }
   }
 }
