--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "check": "tsx src/scripts/checkRailwayDefinitions.ts",
     "apply": "tsx src/scripts/applyRailwayDefinitions.ts",
     "merge": "tsx src/scripts/mergeCountryFiles.ts",
-    "populateDb": "tsx src/scripts/populateDb.ts"
+    "populateDb": "node --max-old-space-size=8192 ./node_modules/tsx/dist/cli.mjs src/scripts/populateDb.ts"
   },
   "repository": {
     "type": "git",
