--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-POSTGRES_DB=railmap
+POSTGRES_DB=railway-logbook
 DB_USER=railways_user
 DB_PASSWORD=your_secure_password_here
 
