--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+name: railway-logbook
+
 services:
-  postgres:
+  db:
     image: postgis/postgis:18-3.6-alpine
-    container_name: osm-railways-db
+    container_name: db
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${DB_USER}
@@ -13,34 +15,36 @@ services:
       - ./database/init:/docker-entrypoint-initdb.d
     restart: unless-stopped
 
-  martin:
+  tiles:
     image: ghcr.io/maplibre/martin:latest
+    container_name: tiles
     restart: always
     ports:
       - 3001:3000
     environment:
-      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${POSTGRES_DB}
     volumes:
       - ./martin:/config
     command: --config /config/configuration.yml
     depends_on:
-      - postgres
+      - db
 
-  railmap:
-    image: railmap
+  frontend:
+    image: railway-logbook-frontend
+    container_name: frontend
     restart: always
     ports:
       - 3000:3000
     environment:
-      - DB_HOST=postgres
+      - DB_HOST=db
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - JWT_SECRET=${JWT_SECRET}
-      - MARTIN_URL=http://martin:3000
+      - MARTIN_URL=http://tiles:3000
     depends_on:
-      - postgres
-      - martin
+      - db
+      - tiles
 
 volumes:
   postgres_data:
