--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "prepareMapData": "sh ./osmium-scripts/prepare.sh",
-    "importMapData": "node --max-old-space-size=8192 ./node_modules/tsx/dist/cli.mjs src/scripts/populateDb.ts",
+    "importMapData": "node --max-old-space-size=8192 ./node_modules/tsx/dist/cli.mjs src/scripts/importMapData.ts",
     "exportRouteData": "tsx src/scripts/exportRoutes.ts",
     "importRouteData": "tsx src/scripts/importRoutes.ts",
     "applyVectorTiles": "tsx src/scripts/applyVectorTiles.ts",
