--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "importMapData": "node --max-old-space-size=8192 ./node_modules/tsx/dist/cli.mjs src/scripts/importMapData.ts",
     "verifyRouteData": "tsx src/scripts/verifyRouteData.ts",
     "migration:addCountries": "tsx src/scripts/addCountryColumns.ts",
+    "migration:addPartSplits": "tsx src/scripts/addPartSplits.ts",
     "exportRouteData": "tsx src/scripts/exportRoutes.ts",
     "importRouteData": "tsx src/scripts/importRoutes.ts",
     "applyVectorTiles": "tsx src/scripts/applyVectorTiles.ts",
