--- a/martin/configuration.yml
+++ b/martin/configuration.yml
@@ -22,6 +22,14 @@ postgres:
       maxzoom: 18
       # This function accepts z, x, y parameters
 
+    # Railway part splits (overlay for split segments)
+    railway_part_splits_tile:
+      schema: public
+      function: railway_part_splits_tile
+      minzoom: 4
+      maxzoom: 18
+      # This function accepts z, x, y parameters
+
     # Railway routes (combined lines with metadata)
     railway_routes_tile:
       schema: public
@@ -40,6 +48,9 @@ postgres:
       minzoom: 9
       maxzoom: 18
       # This function accepts z, x, y parameters
+
+# Cache configuration - disable caching for dynamic data
+cache_size_mb: 0
 
 # Server configuration
 listen_addresses: "0.0.0.0:3000"
