--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "transliteration": "^2.6.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
@@ -50,10 +51,11 @@
     "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/bcryptjs": "^2.4.6",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
     "@types/node": "^25.0.1",
     "@types/pg": "^8.16.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/transliteration": "^1.6.1",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4.1.18"
