--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "exportRouteData": "tsx src/scripts/exportRoutes.ts",
     "importRouteData": "tsx src/scripts/importRoutes.ts",
     "applyVectorTiles": "tsx src/scripts/applyVectorTiles.ts",
-    "addAdminNotes": "tsx src/scripts/addAdminNotes.ts",
+    "addIntendedBacktracking": "tsx src/scripts/addIntendedBacktracking.ts",
     "markAllRoutesInvalid": "tsx src/scripts/markAllRoutesInvalid.ts",
     "listStations": "tsx src/scripts/listStations.ts",
     "uploadMapData": "pscp ./data/*.geojson railmap@railmap.zlatkovsky.cz:/home/railmap/osm-trains/data/",
